fix: send email fixed with new env variables